<resources>
    <string name="app_name">AndroidXtended</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="shareIt">Compartelo</string>
    <string name="opinion">Como te lo estas pasando</string>
    <string name="secondNumberHint">Introduce numero 2</string>
    <string name="result">Resultado</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="enterYourName">Introduzca su nombre</string>
    <string name="invalidUserName">El nombre no puede estar vacio</string>
    <string name="title_activity_bal">BAL</string>
    <string name="sendOpinion">Opina</string>
    <string name="sendOpinionFirst">Debe enviar su opinion antes de compartirla</string>
</resources>
